--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
 
-title: Trustworthy Machine Learning
+title: Fair and Explainable AI in Biology and Medicine
 description: Workshop at MERcon 2022 | 29 July
 
 github:
