--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: Fair and Explainable AI in Biology and Medicine
 description: Workshop at MERcon 2022 | 29 July
 
 github:
-  is_project_page: false
+  is_project_page: true
